# mignn

./: LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: mignn_cornell.ipynb  mignn_dl.ipynb  mignn_gl_visu.ipynb  run_dl.py  teapot_render.ipynb
notebooks/scenes/cbox/: cbox.xml
notebooks/scenes/cornell-box/: scene.exr  scene.xml  scene_ref.exr
notebooks/scenes/living-room/: scene.xml
notebooks/scenes/living-room/viewpoints/: camera_10.txt  camera_11.txt  camera_15.txt  camera_2.txt  camera_3.txt  camera_4.txt  camera_5.txt  camera_7.txt
notebooks/scenes/living-room/viewpoints_test/: test_1.txt  test_2.txt  test_3.txt  test_4.txt  test_5.txt  test_6.txt  test_7.txt  test_8.txt  train_12.txt  train_9.txt
notebooks/scenes/living-room/viewpoints_train/: camera_1.txt  camera_13.txt  camera_14.txt  camera_16.txt  camera_6.txt  camera_8.txt
notebooks/scenes/teapot/: scene.xml
notebooks/scenes/teapot-double/: scene.exr  scene.xml
notebooks/scenes/teapot-double/viewpoints/: camera_10.txt  camera_5.txt  camera_8.txt
notebooks/scenes/teapot-double/viewpoints_test/: test_2.txt  test_4.txt  train_9.txt
notebooks/scenes/teapot-double/viewpoints_train/: camera_16.txt  camera_19.txt  camera_3.txt  camera_4.txt
notebooks/scenes/teapot/viewpoints/: camera_14.txt  camera_17.txt  camera_18.txt  camera_20.txt
notebooks/scenes/teapot/viewpoints_test/: test_0.txt  test_1.txt  test_3.txt  train_15.txt
notebooks/scenes/veach-mis/: scene.xml
scripts/: .gitignore  build_and_stack.py  config.py  generate_dataset.py  load_and_save.py  load_build_and_stack.py  predict.py  prepare_data.py  prepare_dataset.py  run_all.py  run_dl.py  scale_subset.py  scale_viewpoint.py  train.py  transforms.py  utils.py
scripts/models/: factory.py  gcn_model.py  manager.py  nerf.py  param.py
src/mignn/container/: __init__.py  advanced.py  base.py  simple.py
src/mignn/dataset/: __init__.py  base.py  loader.py
src/mignn/encoder/: __init__.py  base.py
src/mignn/entities/node/: base.py  (+2 more)
src/mignn/manager/: __init__.py  base.py
src/mignn/processing/: __init__.py  clipping.py  embedding.py  encoder.py  scalers.py  transforms.py
(+13 files in other folders)
