[project]
name = "mignn"
version = "0.0.1"
authors = [
  { name="Jérôme Buisine", email="jerome.buisine@univ-littoral.fr" },
]
description = "GNN toolkit for Mitsuba"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/jbuisine/mignn"
"Bug Tracker" = "https://github.com/jbuisine/mignn/issues"