[project]
name = "mignn"
version = "0.0.1"
authors = [
  { name="Jérôme Buisine", email="jerome.buisine@univ-littoral.fr" },
]
description = "Graph Neural Network toolkit using Mitsuba"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = [
  "setuptools>=61.0",
  "numpy==1.24.2",
  "opencv-python==4.7.0.72",
  "torch==2.0.0"
]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/jbuisine/mignn"
"Bug Tracker" = "https://github.com/jbuisine/mignn/issues"