[project]
name = "mignn"
version = "0.0.1"
authors = [
  { name="Jérôme Buisine", email="jerome.buisine@univ-littoral.fr" },
]
description = "Graph Neural Network toolkit using Mitsuba"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "mignn.VERSION"}
readme = {file = ["README.mr"]}

[project.urls]
"Homepage" = "https://github.com/jbuisine/mignn"
"Bug Tracker" = "https://github.com/jbuisine/mignn/issues"